--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -192,6 +192,20 @@
              width="auto"
              height="auto" />
       </a>
+      <div
+      data-heyform-id="JsPT1ESM"
+      data-heyform-type="modal"
+      data-heyform-custom-url="https://forms.fossbu.co/form/"
+      data-heyform-size="small"
+      data-heyform-open-trigger="click"
+      data-heyform-open-delay="5"
+      data-heyform-open-scroll-percent="30"
+      data-heyform-trigger-background="#1d4ed8"
+      data-heyform-trigger-text="Sponsor Us"
+      data-heyform-hide-after-submit="false"
+      data-heyform-auto-close="5"
+      ><button class="heyform__trigger-button " type="button" onclick="HeyForm.openModal('JsPT1ESM')">Sponsor Us</button></div>
+      <script src="https://www.unpkg.com/@heyform-inc/embed@latest/dist/index.umd.js"></script>
     </div>
   </div>
 
