fix: update sponsorship modal to hide after submission

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -202,7 +202,7 @@
       data-heyform-open-scroll-percent="30"
       data-heyform-trigger-background="#1d4ed8"
       data-heyform-trigger-text="Sponsor Us"
-      data-heyform-hide-after-submit="false"
+      data-heyform-hide-after-submit="true"
       data-heyform-auto-close="5"
       ><button class="heyform__trigger-button " type="button" onclick="HeyForm.openModal('JsPT1ESM')">Sponsor Us</button></div>
       <script src="https://www.unpkg.com/@heyform-inc/embed@latest/dist/index.umd.js"></script>
